# libminimum

./: .gitignore  CMakeLists.txt  README.md
example/: CMakeLists.txt  Makefile  graph.cc  int.h  print.cc
include/: _edge.cc  _edge.h  _graph.cc  _graph.h  _graph_container.h  _int.h  cxx17.h  fixed_graph.h  functional.h  graph.h  graph_container.h  maybe.h  pool.h  print.cc  print.h  string-algorithm.h  type_traits.h
include/bits/: minimum.h
stream/: Makefile  print.h  test-main.cc
test/: .gitignore  CMakeLists.txt
test/container/: Makefile  fixed_graph.h  graph.h  test-main.cc
test/either/: README.md  test-main.cc
test/maybe/: Makefile  README.md  test-main.cc
test/pool/: test-main.cc
test/stream/: test-main.cc
test/string-algorithm/: test-main.cc
